--- a/package.json
+++ b/package.json
@@ -3,11 +3,23 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "postinstall": "node node_modules/datatables.net-editor/install.js ./Editor.zip"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.11.6",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
+        "jquery": "^3.7.0",
+        "laravel-datatables-vite": "^0.5.2",
         "laravel-vite-plugin": "^0.7.5",
+        "sass": "^1.56.1",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "datatables.net-dt": "^1.13.4",
+        "datatables.net-editor": "^2.1.0",
+        "datatables.net-editor-bs5": "^2.0.3",
+        "sweetalert2": "^11.7.5"
     }
 }
